Solve 02-flex-header... forget about the gap property

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
 }
 
 .logo {
@@ -9,11 +13,18 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px;
 }
 
 ul {
+  display: flex;
+  justify-content: space-around;
   /* this removes the dots on the list items*/
   list-style-type: none;
+}
+
+li {
+  margin: 10px;
 }
 
 a {
@@ -22,4 +33,10 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+
+.left-links {
+  margin-left: -40px;
+  /* Hacky... I don't like it but it works */
 }
